# 3DMath

./: .gitignore  CMakeLists.txt
Source/: AffineTransform.cpp  AffineTransform.h  AxisAlignedBox.cpp  AxisAlignedBox.h  BoundingBoxTree.cpp  BoundingBoxTree.h  BspTree.cpp  BspTree.h  Circle.cpp  Circle.h  Defines.h  Exception.cpp  Exception.h  FileFormat.cpp  FileFormat.h  Function.cpp  Function.h  Graph.cpp  Graph.h  HandleObject.cpp  HandleObject.h  IndexTriangle.cpp  IndexTriangle.h  Line.cpp  Line.h  LineSegment.cpp  LineSegment.h  LinearTransform.cpp  LinearTransform.h  ListFunctions.h  Matrix4x4.cpp  Matrix4x4.h  ParticleSystem.cpp  ParticleSystem.h  Plane.cpp  Plane.h  Polygon.cpp  Polygon.h  Random.cpp  Random.h  (+18 more)
